--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+#Custom server tomcat
+spring.application.name=servicio-universidades
+server.port=8090
+server.connection-timeout=5s
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/universidadm
 spring.datasource.username=postgres
 spring.datasource.password=admin
